; ModuleID = '/home/carl/AnghaBench/linux/scripts/kconfig/extr_preprocess.c_variable_del.c'
source_filename = "/home/carl/AnghaBench/linux/scripts/kconfig/extr_preprocess.c_variable_del.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.variable = type { %struct.variable*, %struct.variable*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.variable*)* @variable_del to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @variable_del(%struct.variable* %0) #0 {
  %2 = alloca %struct.variable*, align 8
  store %struct.variable* %0, %struct.variable** %2, align 8
  %3 = load %struct.variable*, %struct.variable** %2, align 8
  %4 = getelementptr inbounds %struct.variable, %struct.variable* %3, i32 0, i32 2
  %5 = call i32 @list_del(i32* %4)
  %6 = load %struct.variable*, %struct.variable** %2, align 8
  %7 = getelementptr inbounds %struct.variable, %struct.variable* %6, i32 0, i32 1
  %8 = load %struct.variable*, %struct.variable** %7, align 8
  %9 = call i32 @free(%struct.variable* %8)
  %10 = load %struct.variable*, %struct.variable** %2, align 8
  %11 = getelementptr inbounds %struct.variable, %struct.variable* %10, i32 0, i32 0
  %12 = load %struct.variable*, %struct.variable** %11, align 8
  %13 = call i32 @free(%struct.variable* %12)
  %14 = load %struct.variable*, %struct.variable** %2, align 8
  %15 = call i32 @free(%struct.variable* %14)
  ret void
}

declare dso_local i32 @list_del(i32*) #1

declare dso_local i32 @free(%struct.variable*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
